Modify YouCompleteMe Support PHP

--- a/.vimrc.bundles.conf
+++ b/.vimrc.bundles.conf
@@ -15,9 +15,9 @@
             endif
 
             " Bundle 'majutsushi/tagbar'
-            if (filereadable(expand("~/.vim/bundle/tagbar")))
-                nnoremap<silent><F4>:TagbarToggle<CR>
-                let g:tagbar_left = 1
+            if (isdirectory(expand("~/.vim/bundle/tagbar")))
+                let g:tagbar_width = 20 "default 40
+                nnoremap <silent> <F4> :TagbarToggle<CR>
             endif
         endif
     " }
@@ -335,13 +335,13 @@
                     \ 'pandoc' : 1,
                     \ 'infolog' : 1,
                     \ 'mail' : 1
-                    \}              
-               
+                    \}
+
                "If you're using YCM's identifier completer in C-family languages but cannot use
                "the clang-based semantic completer for those languages _and_ want to use the
                "GCC Syntastic checkers, unset this option.
                let g:ycm_show_diagnostics_ui = 0
-               
+
                 "youcompleteme  默认tab  s-tab 和 ultisnips 冲突
                 let g:ycm_key_list_select_completion = ['<Down>']
                 let g:ycm_key_list_previous_completion = ['<Up>']
@@ -364,6 +364,9 @@
                 autocmd FileType xml setlocal omnifunc=xmlcomplete#CompleteTags
                 autocmd FileType ruby setlocal omnifunc=rubycomplete#Complete
                 autocmd FileType haskell setlocal omnifunc=necoghc#omnifunc
+                " [CHRIS][170309][ADD][START]
+                " 如果是VIM7.0以上，不需要再下载 phpcomplete.vim 这个插件，因为安装时自带了，/usr/share/vim/vim73/autoload/phpcomplete.vim
+                autocmd FileType php setlocal omnifunc=phpcomplete#CompletePHP
 
                 " Haskell post write lint and check with ghcmod
                 " $ `cabal install ghcmod` if missing and ensure
@@ -600,23 +603,6 @@
                 let g:neocomplcache_omni_patterns.cpp = '[^.[:digit:] *\t]\%(\.\|->\)\|\h\w*::'
                 let g:neocomplcache_omni_patterns.ruby = '[^. *\t]\.\h\w*\|\h\w*::'
                 let g:neocomplcache_omni_patterns.go = '\h\w*\.\?'
-        " }
-        " Normal Vim omni-completion {
-        " To disable omni complete, add the following to your .vimrc.before.local file:
-        "   let g:spf13_no_omni_complete = 1
-            elseif !exists('g:spf13_no_omni_complete')
-                " Enable omni-completion.
-                autocmd FileType css setlocal omnifunc=csscomplete#CompleteCSS
-                autocmd FileType html,markdown setlocal omnifunc=htmlcomplete#CompleteTags
-                autocmd FileType javascript setlocal omnifunc=javascriptcomplete#CompleteJS
-                autocmd FileType python setlocal omnifunc=pythoncomplete#Complete
-                autocmd FileType xml setlocal omnifunc=xmlcomplete#CompleteTags
-                autocmd FileType ruby setlocal omnifunc=rubycomplete#Complete
-                autocmd FileType haskell setlocal omnifunc=necoghc#omnifunc
-                " [CHRIS][170309][ADD][START]
-                " 如果是VIM7.0以上，不需要再下载 phpcomplete.vim 这个插件，因为安装时自带了，/usr/share/vim/vim73/autoload/phpcomplete.vim
-                autocmd FileType php setsetlocal omnifunc=phpcomplete#CompletePHP
-
             endif
         " }
 
