--- a/.vimrc.bundles.conf
+++ b/.vimrc.bundles.conf
@@ -36,27 +36,58 @@
         " }
         " spf13/vim-colors
         " flazz/vim-colorschemes
+        " powerline/fonts {
+            if isdirectory(expand("~/.vim/bundle/fonts/"))
+                let g:airline_powerline_fonts = 1
+            endif
+        " }
         " vim-airline {
             "Bundle 'vim-airline/vim-airline'
-            "Bundle 'vim-airline/vim-airline-themes'
-            " Set configuration options for the statusline plugin vim-airline.
-            " Use the powerline theme and optionally enable powerline symbols.
-            " To use the symbols , , , , , , and .in the statusline
-            " segments add the following to your .vimrc.before.local file:
-            let g:airline_powerline_fonts=1
-            " If the previous symbols do not render for you then install a
-            " powerline enabled font.
-
-            " See `:echo g:airline_theme_map` for some more choices
-            " Default in terminal vim is 'dark'
+            if isdirectory(expand("~/.vim/bundle/vim-airline/"))
+                if !exists('g:airline_symbols')
+                    let g:airline_symbols = {}
+                endif
+                let g:airline_left_sep ='▶ '
+                let g:airline_left_alt_sep = '❯'
+                let g:airline_right_sep ='◀ '
+                let g:airline_right_alt_sep = '❮'
+                let g:airline_symbols.branch = '⎇ '
+                "let g:airline_symbols.branch = '۲'
+                "let g:airline_left_sep='›'  " Slightly fancier than '>'
+                "let g:airline_right_sep='‹' " Slightly fancier than '<'
+                " 开启tabline
+                let g:airline#extensions#tabline#enabled = 1
+                let g:airline#extensions#tabline#buffer_min_count = 2
+                " tabline中当前buffer两端的分隔字符
+                let g:airline#extensions#tabline#left_sep = ' '
+                " tabline中未激活buffer两端的分隔字符
+                let g:airline#extensions#tabline#left_alt_sep = '|'
+                " tabline中buffer显示编号
+                " let g:airline#extensions#tabline#buffer_nr_show = 1
+                let g:airline#extensions#tabline#show_tab_type = 1
+                " 使用airline自己定义的buffer编号跳转
+                let g:airline#extensions#tabline#buffer_idx_mode = 1
+                nmap <leader>1 <Plug>AirlineSelectTab1
+                nmap <leader>2 <Plug>AirlineSelectTab2
+                nmap <leader>3 <Plug>AirlineSelectTab3
+                nmap <leader>4 <Plug>AirlineSelectTab4
+                nmap <leader>5 <Plug>AirlineSelectTab5
+                nmap <leader>6 <Plug>AirlineSelectTab6
+                nmap <leader>7 <Plug>AirlineSelectTab7
+                nmap <leader>8 <Plug>AirlineSelectTab8
+                nmap <leader>9 <Plug>AirlineSelectTab9
+                nmap <leader>- <Plug>AirlineSelectPrevTab
+                nmap <leader>+ <Plug>AirlineSelectNextTab
+                " enable/disable detection of whitespace errors.
+                " 0: disable    1: enable
+                let g:airline#extensions#whitespace#enabled = 0
+                " statusline appear all the time, add the following to your vimrc
+                set laststatus=2
+            endif
+            " Bundle 'vim-airline/vim-airline-themes'
             if isdirectory(expand("~/.vim/bundle/vim-airline-themes/"))
                 if !exists('g:airline_theme')
                     let g:airline_theme = 'solarized'
-                endif
-                if !exists('g:airline_powerline_fonts')
-                    " Use the default set of separators with a few customizations
-                    let g:airline_left_sep='›'  " Slightly fancier than '>'
-                    let g:airline_right_sep='‹' " Slightly fancier than '<'
                 endif
             endif
         " }
@@ -92,7 +123,14 @@
             if isdirectory(expand("~/.vim/bundle/vim-indent-guides/"))
                 let g:indent_guides_start_level = 2
                 let g:indent_guides_guide_size = 1
-                let g:indent_guides_enable_on_vim_startup = 1
+                " let g:indent_guides_enable_on_vim_startup = 1
+                " Use this option to control whether the plugin considers tabs as indention.
+                " Default: 1. Values: 0 or 1.
+                let g:indent_guides_tab_guides = 0
+                " Alternatively you can manually setup the highlight colors yourself
+                "let g:indent_guides_auto_colors = 0
+                "autocmd VimEnter,Colorscheme * :hi IndentGuidesOdd  guibg=red   ctermbg=3
+                "autocmd VimEnter,Colorscheme * :hi IndentGuidesEven guibg=green ctermbg=4
             endif
             " detect both tab and space indent styles.
             " Show Every detect level
@@ -170,6 +208,7 @@
         " }
         " Bundle 'tpope/vim-repeat'
         " Tabularize {
+            "You can avoid loading this plugin by setting the "Tabular_loaded" global variable
             "let g:tabular_loaded = 1
             if isdirectory(expand("~/.vim/bundle/tabular"))
                 nmap <Leader>a& :Tabularize /&<CR>
@@ -291,7 +330,7 @@
                 inoremap <expr> <C-d>      pumvisible() ? "\<PageDown>\<C-p>\<C-n>" : "\<C-d>"
                 inoremap <expr> <C-u>      pumvisible() ? "\<PageUp>\<C-p>\<C-n>" : "\<C-u>"
 
-                " Automatically open and close the popup menu / preview window  
+                " Automatically open and close the popup menu / preview window
                 au CursorMovedI,InsertLeave * if pumvisible() == 0|silent! pclose|endif
                 set completeopt=menu,preview,longest
             endif
@@ -318,7 +357,7 @@
                 " 禁止缓存匹配项,每次都重新生成匹配项
                 let g:ycm_cache_omnifunc=0
                 " 开启语义补全
-                let g:ycm_seed_identifiers_with_syntax=1	
+                let g:ycm_seed_identifiers_with_syntax=1
                 "在注释输入中也能补全
                 let g:ycm_complete_in_comments = 1
                 "在字符串输入中也能补全
@@ -350,7 +389,7 @@
 
                 " SirVer/ultisnips 代码片断
                 " Trigger configuration. YCM conflicts with UltiSnips TAB key usage
-                let g:UltiSnipsExpandTrigger = '<C-k>'
+                let g:UltiSnipsExpandTrigger = '<Tab>'
                 let g:UltiSnipsJumpForwardTrigger = '<C-k>'
                 let g:UltiSnipsJumpBackwardTrigger = '<C-j>'
                 " If you want :UltiSnipsEdit to split your window.
@@ -643,17 +682,17 @@
             endif
         " }
         " arnaud-lb/vim-php-namespace" {
-            "if isdirectory(expand("~/.vim/bundle/vim-php-namespace"))
-            "    function! IPhpInsertUse()
-            "        call PhpInsertUse()
-            "        call feedkeys('a',  'n')
-            "    endfunction
-            "    autocmd FileType php inoremap <Leader>u <Esc>:call IPhpInsertUse()<CR>
-            "    autocmd FileType php noremap <Leader>u :call PhpInsertUse()<CR>
-            "endif
+            if isdirectory(expand("~/.vim/bundle/vim-php-namespace"))
+                function! IPhpInsertUse()
+                    call PhpInsertUse()
+                    call feedkeys('a',  'n')
+                endfunction
+                autocmd FileType php inoremap <Leader>u <Esc>:call IPhpInsertUse()<CR>
+                autocmd FileType php noremap <Leader>u :call PhpInsertUse()<CR>
+            endif
         " }
-        " Twig是PHP的一个灵活、高效并且安全的PHP模板引擎
         "Bundle 'beyondwords/vim-twig'
+        "Bundle 'mikehaertl/yii2-apidoc-vim'
     " }
 
 
@@ -665,7 +704,7 @@
                 nmap <Leader>ac <Plug>ToggleAutoCloseMappings
             endif
         " }
-        " hail2u/vim-css3-syntax 
+        " hail2u/vim-css3-syntax
         " gorodinskiy/vim-coloresque
         " mattn/webapi-vim'
         " tpope/vim-haml
@@ -676,7 +715,7 @@
         " elzr/vim-json {
             if isdirectory(expand("~/.vim/bundle/vim-json"))
                 nmap <leader>jt <Esc>:%!python -m json.tool<CR><Esc>:set filetype=json<CR>
-                let g:vim_json_syntax_conceal = 0            
+                let g:vim_json_syntax_conceal = 0
             endif
         " }
         " groenewege/vim-less
