--- a/.vimrc.bundles.conf
+++ b/.vimrc.bundles.conf
@@ -132,8 +132,6 @@
                 "autocmd VimEnter,Colorscheme * :hi IndentGuidesOdd  guibg=red   ctermbg=3
                 "autocmd VimEnter,Colorscheme * :hi IndentGuidesEven guibg=green ctermbg=4
             endif
-            " detect both tab and space indent styles.
-            " Show Every detect level
         " }
         " Wildfire "{
             if isdirectory(expand("~/.vim/bundle/wildfire/"))
@@ -159,34 +157,52 @@
                 nmap <leader>sc :SessionClose<CR>
             endif
         " }
+        "  vim-easymotion {
+            if isdirectory(expand("~/.vim/bundle/vim-easymotion/"))
+                " <Leader>f{char} to move to {char}
+                map  <Leader>f <Plug>(easymotion-bd-f)
+                nmap <Leader>f <Plug>(easymotion-overwin-f)
+
+                " s{char}{char} to move to {char}{char}
+                nmap s <Plug>(easymotion-overwin-f2)
+
+                " Move to line
+                map <Leader>L <Plug>(easymotion-bd-jk)
+                nmap <Leader>L <Plug>(easymotion-overwin-line)
+
+                " Move to word
+                map  <Leader>w <Plug>(easymotion-bd-w)
+                nmap <Leader>w <Plug>(easymotion-overwin-w)
+            endif
+        " }
         " Bundle 'terryma/vim-multiple-cursors'
         " Bundle 'jiangmiao/auto-pairs'
         " Rainbow {
             if isdirectory(expand("~/.vim/bundle/rainbow/"))
                 let g:rainbow_active = 1 "0 if you want to enable it later via :RainbowToggle
                 " 下面的为精确配置
-                let g:rainbow_conf = {
-                    \    'guifgs': ['royalblue3', 'darkorange3', 'seagreen3', 'firebrick'],
-                    \    'ctermfgs': ['lightblue', 'lightyellow', 'lightcyan', 'lightmagenta'],
-                    \    'operators': '_,_',
-                    \    'parentheses': ['start=/(/ end=/)/ fold', 'start=/\[/ end=/\]/ fold', 'start=/{/ end=/}/ fold'],
-                    \    'separately': {
-                    \        '*': {},
-                    \        'tex': {
-                    \        	'parentheses': ['start=/(/ end=/)/', 'start=/\[/ end=/\]/'],
-                    \        },
-                    \        'lisp': {
-                    \        	'guifgs': ['royalblue3', 'darkorange3', 'seagreen3', 'firebrick', 'darkorchid3'],
-                    \        },
-                    \        'vim': {
-                    \        	'parentheses': ['start=/(/ end=/)/', 'start=/\[/ end=/\]/', 'start=/{/ end=/}/ fold', 'start=/(/ end=/)/ containedin=vimFuncBody', 'start=/\[/ end=/\]/ containedin=vimFuncBody', 'start=/{/ end=/}/ fold containedin=vimFuncBody'],
-                    \        },
-                    \        'html': {
-                    \        	'parentheses': ['start=/\v\<((area|base|br|col|embed|hr|img|input|keygen|link|menuitem|meta|param|source|track|wbr)[ >])@!\z([-_:a-zA-Z0-9]+)(\s+[-_:a-zA-Z0-9]+(\=("[^"]*"|'."'".'[^'."'".']*'."'".'|[^ '."'".'"><=`]*))?)*\>/ end=#</\z1># fold'],
-                    \        },
-                    \        'css': 0,
-                    \    }
-                \}
+	            let g:rainbow_conf = {
+	            \	'guifgs': ['royalblue3', 'darkorange3', 'seagreen3', 'firebrick'],
+	            \	'ctermfgs': ['lightblue', 'lightyellow', 'lightcyan', 'lightmagenta'],
+	            \	'operators': '_,_',
+	            \	'parentheses': ['start=/(/ end=/)/ fold', 'start=/\[/ end=/\]/ fold', 'start=/{/ end=/}/ fold'],
+	            \	'separately': {
+	            \		'*': {},
+	            \		'tex': {
+	            \			'parentheses': ['start=/(/ end=/)/', 'start=/\[/ end=/\]/'],
+	            \		},
+	            \		'lisp': {
+	            \			'guifgs': ['royalblue3', 'darkorange3', 'seagreen3', 'firebrick', 'darkorchid3'],
+	            \		},
+	            \		'vim': {
+	            \			'parentheses': ['start=/(/ end=/)/', 'start=/\[/ end=/\]/', 'start=/{/ end=/}/ fold', 'start=/(/ end=/)/ containedin=vimFuncBody', 'start=/\[/ end=/\]/ containedin=vimFuncBody', 'start=/{/ end=/}/ fold containedin=vimFuncBody'],
+	            \		},
+	            \		'html': {
+	            \			'parentheses': ['start=/\v\<((area|base|br|col|embed|hr|img|input|keygen|link|menuitem|meta|param|source|track|wbr)[ >])@!\z([-_:a-zA-Z0-9]+)(\s+[-_:a-zA-Z0-9]+(\=("[^"]*"|'."'".'[^'."'".']*'."'".'|[^ '."'".'"><=`]*))?)*\>/ end=#</\z1># fold'],
+	            \		},
+	            \		'css': 0,
+	            \	}
+	            \}
             endif
         " }
         " UndoTree {
@@ -201,7 +217,7 @@
     " General Programming {
         " Bundle 'tpope/vim-surround' {
             if isdirectory(expand("~/.vim/bundle/vim-surround/"))
-                " Chris添加了个快捷键  如此类推
+                " Chris Add new hot key
                 autocmd FileType php let b:surround_45 = "<?php \r ?>"
             endif
 
@@ -236,9 +252,12 @@
                 let g:ctrlp_working_path_mode = 'ra'
                 "nnoremap <silent> <D-t> :CtrlP<CR>
                 "nnoremap <silent> <D-r> :CtrlPMRU<CR>
+                let g:ctrlp_custom_ignore = '\v[\/]\.(git|hg|svn)$'
                 let g:ctrlp_custom_ignore = {
-                    \ 'dir':  '\.git$\|\.hg$\|\.svn$',
-                    \ 'file': '\.exe$\|\.so$\|\.dll$\|\.pyc$' }
+                  \ 'dir':  '\v[\/]\.(git|hg|svn)$',
+                  \ 'file': '\v\.(exe|so|dll)$',
+                  \ 'link': 'some_bad_symbolic_links',
+                  \ }
 
                 if executable('ag')
                     let s:ctrlp_fallback = 'ag %s --nocolor -l -g ""'
@@ -278,8 +297,9 @@
         "}
         " Bundle 'tpope/vim-fugitive'
         " Bundle 'mattn/webapi-vim'
-        " Bundle 'mhinz/vim-signify'    <无需配置>
+        " Bundle 'mhinz/vim-signify'
         " Fugitive {
+            " This plugin is only available if 'compatible' is not set.
             if isdirectory(expand("~/.vim/bundle/vim-fugitive/"))
                 nnoremap <silent> <leader>gs :Gstatus<CR>
                 nnoremap <silent> <leader>gd :Gdiff<CR>
@@ -541,107 +561,6 @@
                 let g:neocomplete#sources#omni#input_patterns.c = '[^.[:digit:] *\t]\%(\.\|->\)'
                 let g:neocomplete#sources#omni#input_patterns.cpp = '[^.[:digit:] *\t]\%(\.\|->\)\|\h\w*::'
                 let g:neocomplete#sources#omni#input_patterns.ruby = '[^. *\t]\.\h\w*\|\h\w*::'
-        " }
-
-        " neocomplcache {
-            elseif count(g:bundle_groups, 'neocomplcache')
-                let g:acp_enableAtStartup = 0
-                let g:neocomplcache_enable_at_startup = 1
-                let g:neocomplcache_enable_camel_case_completion = 1
-                let g:neocomplcache_enable_smart_case = 1
-                let g:neocomplcache_enable_underbar_completion = 1
-                let g:neocomplcache_enable_auto_delimiter = 1
-                let g:neocomplcache_max_list = 15
-                let g:neocomplcache_force_overwrite_completefunc = 1
-
-                " Define dictionary.
-                let g:neocomplcache_dictionary_filetype_lists = {
-                            \ 'default' : '',
-                            \ 'vimshell' : $HOME.'/.vimshell_hist',
-                            \ 'scheme' : $HOME.'/.gosh_completions'
-                            \ }
-
-                " Define keyword.
-                if !exists('g:neocomplcache_keyword_patterns')
-                    let g:neocomplcache_keyword_patterns = {}
-                endif
-                let g:neocomplcache_keyword_patterns._ = '\h\w*'
-
-                " Plugin key-mappings {
-                    " These two lines conflict with the default digraph mapping of <C-K>
-                    imap <C-k> <Plug>(neosnippet_expand_or_jump)
-                    smap <C-k> <Plug>(neosnippet_expand_or_jump)
-                    if exists('g:spf13_noninvasive_completion')
-                        inoremap <CR> <CR>
-                        " <ESC> takes you out of insert mode
-                        inoremap <expr> <Esc>   pumvisible() ? "\<C-y>\<Esc>" : "\<Esc>"
-                        " <CR> accepts first, then sends the <CR>
-                        inoremap <expr> <CR>    pumvisible() ? "\<C-y>\<CR>" : "\<CR>"
-                        " <Down> and <Up> cycle like <Tab> and <S-Tab>
-                        inoremap <expr> <Down>  pumvisible() ? "\<C-n>" : "\<Down>"
-                        inoremap <expr> <Up>    pumvisible() ? "\<C-p>" : "\<Up>"
-                        " Jump up and down the list
-                        inoremap <expr> <C-d>   pumvisible() ? "\<PageDown>\<C-p>\<C-n>" : "\<C-d>"
-                        inoremap <expr> <C-u>   pumvisible() ? "\<PageUp>\<C-p>\<C-n>" : "\<C-u>"
-                    else
-                        imap <silent><expr><C-k> neosnippet#expandable() ?
-                                    \ "\<Plug>(neosnippet_expand_or_jump)" : (pumvisible() ?
-                                    \ "\<C-e>" : "\<Plug>(neosnippet_expand_or_jump)")
-                        smap <TAB> <Right><Plug>(neosnippet_jump_or_expand)
-
-                        inoremap <expr><C-g> neocomplcache#undo_completion()
-                        inoremap <expr><C-l> neocomplcache#complete_common_string()
-                        "inoremap <expr><CR> neocomplcache#complete_common_string()
-
-                        function! CleverCr()
-                            if pumvisible()
-                                if neosnippet#expandable()
-                                    let exp = "\<Plug>(neosnippet_expand)"
-                                    return exp . neocomplcache#close_popup()
-                                else
-                                    return neocomplcache#close_popup()
-                                endif
-                            else
-                                return "\<CR>"
-                            endif
-                        endfunction
-
-                        " <CR> close popup and save indent or expand snippet
-                        imap <expr> <CR> CleverCr()
-
-                        " <CR>: close popup
-                        " <s-CR>: close popup and save indent.
-                        inoremap <expr><s-CR> pumvisible() ? neocomplcache#close_popup()."\<CR>" : "\<CR>"
-                        "inoremap <expr><CR> pumvisible() ? neocomplcache#close_popup() : "\<CR>"
-
-                        " <C-h>, <BS>: close popup and delete backword char.
-                        inoremap <expr><BS> neocomplcache#smart_close_popup()."\<C-h>"
-                        inoremap <expr><C-y> neocomplcache#close_popup()
-                    endif
-                    " <TAB>: completion.
-                    inoremap <expr><TAB> pumvisible() ? "\<C-n>" : "\<TAB>"
-                    inoremap <expr><S-TAB> pumvisible() ? "\<C-p>" : "\<TAB>"
-                " }
-
-                " Enable omni completion.
-                autocmd FileType css setlocal omnifunc=csscomplete#CompleteCSS
-                autocmd FileType html,markdown setlocal omnifunc=htmlcomplete#CompleteTags
-                autocmd FileType javascript setlocal omnifunc=javascriptcomplete#CompleteJS
-                autocmd FileType python setlocal omnifunc=pythoncomplete#Complete
-                autocmd FileType xml setlocal omnifunc=xmlcomplete#CompleteTags
-                autocmd FileType ruby setlocal omnifunc=rubycomplete#Complete
-                autocmd FileType haskell setlocal omnifunc=necoghc#omnifunc
-
-                " Enable heavy omni completion.
-                if !exists('g:neocomplcache_omni_patterns')
-                    let g:neocomplcache_omni_patterns = {}
-                endif
-                let g:neocomplcache_omni_patterns.php = '[^. \t]->\h\w*\|\h\w*::'
-                let g:neocomplcache_omni_patterns.perl = '\h\w*->\h\w*\|\h\w*::'
-                let g:neocomplcache_omni_patterns.c = '[^.[:digit:] *\t]\%(\.\|->\)'
-                let g:neocomplcache_omni_patterns.cpp = '[^.[:digit:] *\t]\%(\.\|->\)\|\h\w*::'
-                let g:neocomplcache_omni_patterns.ruby = '[^. *\t]\.\h\w*\|\h\w*::'
-                let g:neocomplcache_omni_patterns.go = '\h\w*\.\?'
             endif
         " }
 
