modify default not flod

--- a/.vimrc.bundles.conf
+++ b/.vimrc.bundles.conf
@@ -409,7 +409,7 @@
 
                 " SirVer/ultisnips 代码片断
                 " Trigger configuration. YCM conflicts with UltiSnips TAB key usage
-                let g:UltiSnipsExpandTrigger = '<Tab>'
+                let g:UltiSnipsExpandTrigger = '<C-k>'
                 let g:UltiSnipsJumpForwardTrigger = '<C-k>'
                 let g:UltiSnipsJumpBackwardTrigger = '<C-j>'
                 " If you want :UltiSnipsEdit to split your window.
@@ -425,7 +425,7 @@
                 autocmd FileType haskell setlocal omnifunc=necoghc#omnifunc
                 " [CHRIS][170309][ADD][START]
                 " 如果是VIM7.0以上，不需要再下载 phpcomplete.vim 这个插件，因为安装时自带了，/usr/share/vim/vim73/autoload/phpcomplete.vim
-                autocmd FileType php setlocal omnifunc=phpcomplete#CompletePHP
+                "autocmd FileType php setlocal omnifunc=phpcomplete#CompletePHP
 
                 " Haskell post write lint and check with ghcmod
                 " $ `cabal install ghcmod` if missing and ensure
@@ -596,8 +596,7 @@
     " PHP {
         " PIV {
             if isdirectory(expand("~/.vim/bundle/PIV"))
-                let g:DisableAutoPHPFolding = 0
-                let g:PIVAutoClose = 0
+                let g:DisableAutoPHPFolding = 1
             endif
         " }
         " arnaud-lb/vim-php-namespace" {
