fix flod in PIV

--- a/.vimrc.bundles.conf
+++ b/.vimrc.bundles.conf
@@ -596,7 +596,9 @@
     " PHP {
         " PIV {
             if isdirectory(expand("~/.vim/bundle/PIV"))
+                " Close fold in PIV
                 let g:DisableAutoPHPFolding = 1
+                let php_folding = 0
             endif
         " }
         " arnaud-lb/vim-php-namespace" {
@@ -641,7 +643,10 @@
             if isdirectory(expand("~/.vim/bundle/vim-javascript"))
                 let g:javascript_plugin_ngdoc = 1
                 let g:javascript_plugin_flow = 1
-                set foldmethod=syntax
+                " Enables code folding based on our syntax file.
+                " Please note this can have a dramatic effect on performance and because it is a
+                " global vim option, we do not set it ourselves.
+                "set foldmethod=syntax
             endif
         " }
         " briancollins/vim-jst
