--- a/.vimrc.bundles.conf
+++ b/.vimrc.bundles.conf
@@ -425,7 +425,7 @@
                 autocmd FileType haskell setlocal omnifunc=necoghc#omnifunc
                 " [CHRIS][170309][ADD][START]
                 " 如果是VIM7.0以上，不需要再下载 phpcomplete.vim 这个插件，因为安装时自带了，/usr/share/vim/vim73/autoload/phpcomplete.vim
-                "autocmd FileType php setlocal omnifunc=phpcomplete#CompletePHP
+                autocmd FileType php setlocal omnifunc=phpcomplete#CompletePHP
 
                 " Haskell post write lint and check with ghcmod
                 " $ `cabal install ghcmod` if missing and ensure
