--- a/.vimrc.bundles.conf
+++ b/.vimrc.bundles.conf
@@ -76,8 +76,8 @@
                 nmap <leader>7 <Plug>AirlineSelectTab7
                 nmap <leader>8 <Plug>AirlineSelectTab8
                 nmap <leader>9 <Plug>AirlineSelectTab9
-                nmap <leader>- <Plug>AirlineSelectPrevTab
-                nmap <leader>+ <Plug>AirlineSelectNextTab
+                nmap <leader>j <Plug>AirlineSelectPrevTab
+                nmap <leader>k <Plug>AirlineSelectNextTab
                 " enable/disable detection of whitespace errors.
                 " 0: disable    1: enable
                 let g:airline#extensions#whitespace#enabled = 0
@@ -159,20 +159,27 @@
         " }
         "  vim-easymotion {
             if isdirectory(expand("~/.vim/bundle/vim-easymotion/"))
-                " <Leader>f{char} to move to {char}
-                map  <Leader>f <Plug>(easymotion-bd-f)
-                nmap <Leader>f <Plug>(easymotion-overwin-f)
+                if OSX()
+                else
+                    " <Leader>f{char} to move to {char}
+                    map  <Leader>f <Plug>(easymotion-bd-f)
+                    nmap <Leader>f <Plug>(easymotion-overwin-f)
 
-                " s{char}{char} to move to {char}{char}
-                nmap s <Plug>(easymotion-overwin-f2)
+                    " Move to line
+                    map <Leader>L <Plug>(easymotion-bd-jk)
+                    nmap <Leader>L <Plug>(easymotion-overwin-line)
 
-                " Move to line
-                map <Leader>L <Plug>(easymotion-bd-jk)
-                nmap <Leader>L <Plug>(easymotion-overwin-line)
+                    " Move to word
+                    map  <Leader>w <Plug>(easymotion-bd-w)
+                    nmap <Leader>w <Plug>(easymotion-overwin-w)
 
-                " Move to word
-                map  <Leader>w <Plug>(easymotion-bd-w)
-                nmap <Leader>w <Plug>(easymotion-overwin-w)
+                    " s{char}{char} to move to {char}{char}
+                    nmap s <Plug>(easymotion-overwin-f2)
+                endif
+
+                " Repeat last operate
+                map <Leader><leader>. <Plug>(easymotion-repeat)
+
             endif
         " }
         " Bundle 'terryma/vim-multiple-cursors'
