--- a/.vimrc.bundles.conf
+++ b/.vimrc.bundles.conf
@@ -618,6 +618,15 @@
                 autocmd FileType php noremap <Leader>u :call PhpInsertUse()<CR>
             endif
         " }
+        " php-cs-fixer {
+            if isdirectory(expand("~/.vim/bundle/vim-php-cs-fixer"))
+                " If you use php-cs-fixer version 2.x
+                let g:php_cs_fixer_rules = "@Symfony"           " options: --rules (default:@PSR2 @Symfony)
+                let g:php_cs_fixer_cache = "/tmp/.php_cs.cache" " options: --cache-file
+                " let g:php_cs_fixer_config_file = '~/.vim/bundle/vim-php-cs-fixer/plugin/php_cs_fixer.vim'      " options: --config
+                autocmd BufWritePost *.php silent! call PhpCsFixerFixFile()
+            endif
+        " }
         "Bundle 'beyondwords/vim-twig'
         "Bundle 'mikehaertl/yii2-apidoc-vim'
     " }
