Mac : php-cs-fix 配置优化

--- a/.vimrc.bundles.conf
+++ b/.vimrc.bundles.conf
@@ -622,7 +622,7 @@
             if isdirectory(expand("~/.vim/bundle/vim-php-cs-fixer"))
                 " If you use php-cs-fixer version 2.x
                 " let g:php_cs_fixer_rules = "@PSR2"           " options: --rules (default:@PSR2 @Symfony)
-                let g:php_cs_fixer_rules = "@Symfony, -concat_space, -phpdoc_summary"
+                let g:php_cs_fixer_rules = "@Symfony, -concat_space, -phpdoc_summary, -yoda_style"
                 let g:php_cs_fixer_cache = "/tmp/.php_cs.cache" " options: --cache-file
                 " let g:php_cs_fixer_config_file = '~/.vim/bundle/vim-php-cs-fixer/plugin/php_cs_fixer.vim'      " options: --config
                 autocmd BufWritePost *.php silent! call PhpCsFixerFixFile()
