--- a/.vimrc.bundles.conf
+++ b/.vimrc.bundles.conf
@@ -664,7 +664,7 @@
                 let php_folding = 0
             endif
         " }
-        " arnaud-lb/vim-php-namespace" {
+        " arnaud-lb/vim-php-namespace {
             if isdirectory(expand("~/.vim/bundle/vim-php-namespace"))
                 function! IPhpInsertUse()
                     call PhpInsertUse()
@@ -686,6 +686,12 @@
         " }
         "Bundle 'beyondwords/vim-twig'
         "Bundle 'mikehaertl/yii2-apidoc-vim'
+        " tobyS/pdv {
+            if isdirectory(expand("~/.vim/bundle/pdv"))
+                let g:pdv_template_dir = $HOME ."/.vim/bundle/pdv/templates_snip"
+                nnoremap <buffer> <C-k> :call pdv#DocumentWithSnip()<CR>
+            endif
+        " }
     " }
 
 
