--- a/.vimrc.bundles.conf
+++ b/.vimrc.bundles.conf
@@ -486,6 +486,8 @@
                 autocmd FileType xml setlocal omnifunc=xmlcomplete#CompleteTags
                 autocmd FileType ruby setlocal omnifunc=rubycomplete#Complete
                 autocmd FileType haskell setlocal omnifunc=necoghc#omnifunc
+                autocmd FileType java setlocal omnifunc=javacomplete#Complete
+
                 " [CHRIS][170309][ADD][START]
                 " 如果是VIM7.0以上，不需要再下载 phpcomplete.vim 这个插件，因为安装时自带了，/usr/share/vim/vim73/autoload/phpcomplete.vim
                 autocmd FileType php setlocal omnifunc=phpcomplete#CompletePHP
